--- a/.github/workflows/cypress-actions.yml
+++ b/.github/workflows/cypress-actions.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Cypress run
-        uses: cypress-io/github-action@v6
+        uses: cypress-io/github-action@v6.5.0
         with:
           install-command: yarn install
           browser: electron
@@ -23,8 +23,5 @@ jobs:
           group: UI Electron
           spec: ${{ github.event.inputs.spec }}
         env:
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          CYPRESS_RECORD_KEY: 46def604-ff14-43e2-9ffa-3413ed05d19e
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
