--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -17,7 +17,7 @@ jobs:
         run: yarn install
 
       - name: Run E2E tests
-        run: node runner_electron.js
+        run: node runner-electron.js
     env: 
       TARGET_TOKEN_ELECTRON: ${{ secrets.TARGET_TOKEN_ELECTRON }}
 
@@ -35,7 +35,7 @@ jobs:
         run: yarn install
 
       - name: Run E2E tests
-        run: node runner_chrome.js
+        run: node runner-chrome.js
     env: 
       TARGET_TOKEN_CHRONE: ${{ secrets.TARGET_TOKEN_CHROME }}
 
@@ -53,6 +53,6 @@ jobs:
         run: yarn install
 
       - name: Run E2E tests
-        run: node runner_firefox.js
+        run: node runner-firefox.js
     env: 
       TARGET_TOKEN_CHRONE: ${{ secrets.TARGET_TOKEN_FIREFOX }}
